create a logo class

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,9 +4,13 @@
 }
 
 body {
-  background-color: red;
+    background-color: red;
 }
 
 header {
-  background-color:green;
+    background-color:green;
+}
+
+.logo {
+    
 }
