Add style to logo class

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,9 +8,10 @@ body {
 }
 
 header {
-    background-color:green;
+    background-color: green;
 }
 
 .logo {
-    
+    text-transform: uppercase;
+    text-align: center;
 }
