Add comments for main navigation

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,8 @@ header {
     background-color: green;
 }
 
+/* Main Navigation */
+
 .logo {
     text-transform: uppercase;
     text-align: center;
