remove .nav-menu from nav element and add .nav-links to ul and style.css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,9 +18,9 @@ header {
     text-align: center;
 }
 
-.nav-menu {
+.nav-links {
     display:flex;
-    justify-content: flex-end;
+    justify-content: space-around;
 }
 
 ul {
