--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Jura:wght@700&display=swap');
+
 * {
     margin: 0;
     padding: 0;
 }
 
 body {
+    font-family: 'Jura', sans-serif;
     background-color: red;
 }
 
