--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,6 +24,7 @@ header {
 
 .nav-links {
     display:flex;
+    flex-wrap: wrap;
     justify-content: space-around;
     list-style-type: none;
     text-transform: uppercase;
@@ -31,4 +32,5 @@ header {
 
 .nav-links a {
     text-decoration: none;
+    color:white;
 }
