--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,7 +23,7 @@ header {
 }
 
 .nav-links {
-    display:flex;
+    display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
     list-style-type: none;
@@ -32,5 +32,9 @@ header {
 
 .nav-links a {
     text-decoration: none;
-    color:white;
+    color: white;
+}
+
+.active {
+    border-bottom: 4px solid darkblue;
 }
