--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Jura:wght@700&display=swap');
 
 * {
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
@@ -36,5 +37,5 @@ header {
 }
 
 .active {
-    border-bottom: 4px solid darkblue;
+    border-bottom: 2px solid darkblue;
 }
