add .nav-links a:hover to style.css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,6 +36,10 @@ header {
     color: white;
 }
 
+.nav-links a:hover {
+    color: orange;
+}
+
 .active {
     border-bottom: 2px solid darkblue;
 }
