add media query for screens with max-width 319px

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,3 +43,10 @@ header {
 .active {
     border-bottom: 2px solid darkblue;
 }
+
+@media screen and (max-width: 319px) {
+    .nav-links {
+        flex-direction: column;
+}
+
+}
