--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,8 +51,13 @@ header {
         font-size: 1rem;
     }
 
+    header {
+        height: auto;
+    }
+
     .nav-links {
         flex-direction: column;
+        align-items: center;
 }
 
 }
