--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,6 +36,8 @@ header {
     text-decoration: none;
     color: white;
     background-color: green;
+    border-radius: 5px;
+    padding: 1px;
 }
 
 .nav-links a:hover {
@@ -59,6 +61,9 @@ header {
     .nav-links {
         flex-direction: column;
         align-items: center;
-}
+    }
 
+    .nav-links li {
+        margin-top: 5px;
+    }
 }
