--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,7 +21,8 @@ header {
     color: darkblue;
     text-shadow: 2px 2px white;
     text-transform: uppercase;
-    text-align: center;
+    text-align: left;
+    margin-left: 5px;
 }
 
 .nav-links {
@@ -60,6 +61,10 @@ header {
         height: auto;
     }
 
+    .logo {
+        text-align: center;
+    }
+
     .nav-links {
         flex-direction: column;
         align-items: center;
@@ -73,12 +78,9 @@ header {
 /* medium to large mobile screens and tablets*/
 
 @media screen and (max-width: 768px) {
-    .logo {
-        text-align: left;
-    }
 
     .nav-links{
-        justify-content: flex-end;
+        justify-content: space-evenly;
     }
     
 }
