--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,9 +28,13 @@ header {
 .nav-links {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: flex-end;
     list-style-type: none;
     text-transform: uppercase;
+}
+
+.nav-links li {
+    margin-right: 5px;
 }
 
 .nav-links a {
@@ -80,7 +84,11 @@ header {
 @media screen and (max-width: 768px) {
 
     .nav-links{
-        justify-content: space-evenly;
+        justify-content: flex-end;
+    }
+
+    .nav-links li {
+        margin-right: 5px;
     }
     
 }
