--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,6 +24,10 @@ header {
     margin-left: 5px;
 }
 
+.logo a {
+    text-decoration: none;
+}
+
 .nav-links {
     display: flex;
     flex-wrap: wrap;
