edit nav links attributes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,11 +50,12 @@ header {
 }
 
 .nav-links a:hover {
-    color: orange;
+    border-bottom: 2px solid darkblue;
 }
 
-.active {
-    border-bottom: 2px solid darkblue;
+.nav-links .active {
+    
+    color: orange
 }
 
 /* small mobile screen sizes */
