--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,12 +39,12 @@ header {
 
 .nav-links li {
     margin: 4px;
+    font-size: 25px;
 }
 
 .nav-links a {
     text-decoration: none;
     color: white;
-    background-color: rgba(43, 43, 80, 0.4);
     border-radius: 5px;
     padding: 1px;
 }
