--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,6 +56,7 @@ header {
 .nav-links .active {
       color: darkorange;
       text-shadow: 1px 1px darkblue;
+      border-bottom: 2px solid darkblue;
 }
 
 /* small mobile screen sizes */
