Style to #hero-image

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,6 +59,14 @@ header {
       border-bottom: 2px solid darkblue;
 }
 
+/* Hero Image */
+
+#hero-image {
+    Height:800px;
+    width:100%;
+    background-image: url(../images/forest-walk.webp);
+}
+
 /* small mobile screen sizes */
 
 @media screen and (max-width: 320px) {
