Fix background-image syntax

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,7 +64,7 @@ header {
 #hero-image {
     Height:800px;
     width:100%;
-    background-image: url(../images/forest-walk.webp);
+    background-image: url('../images/forest-walk.webp');
 }
 
 /* small mobile screen sizes */
