Set hero image to no repeat

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,6 +65,7 @@ header {
     Height:800px;
     width:100%;
     background-image: url('../images/forest-walk.webp');
+    background-repeat: no-repeat;
 }
 
 /* small mobile screen sizes */
