--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,10 +77,12 @@ header {
 #slogan {
     color: white;
     background-color: rgba(175, 187, 242, 0.6);
-    width: 320px;
-    height: 200px;
-    margin-top: 5px;
+    width: 300px;
+    height: 150px;
+    margin-top: 10px;
+    padding-top: 10px;
     text-align: center;
+    left: 10px;
 }
 
 
