--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,11 +77,12 @@ header {
 #slogan {
     color: white;
     background-color: rgba(175, 187, 242, 0.6);
-    width: 300px;
+    width: 100%;
     height: 150px;
     margin-top: 10px;
     padding-top: 10px;
     text-align: center;
+    border-radius: 10px;
     
 }
 
