--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,7 +79,7 @@ header {
     color: white;
     background-color: rgba(175, 187, 242, 0.6);
     width: 100%;
-    height: 150px;
+    height: auto;
     margin-top: 10px;
     padding-top: 10px;
     text-align: center;
