--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -92,6 +92,12 @@ header {
     background-color: rgb(164, 36, 59);
 }
 
+#book-now > a {
+    font-size: 1rem;
+    color:white;
+    text-decoration: none;
+}
+
 /* small mobile screen sizes */
 
 @media screen and (max-width: 320px) {
