--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,8 @@ body {
 }
 
 header {
-    background-color:rgba(135,206,250, 0.6);
+    /*background-color:rgba(135,206,250, 0.6);*/
+    background-color: rgba(175, 187, 242, 0.6);
     border-radius: 10px;
 }
 
