--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,9 +19,9 @@ header {
 /* Main Navigation */
 
 .logo > a {
-    color: rgb(164, 36, 59);
+    color: white;
     text-decoration: none;
-    text-shadow: 2px 2px white;
+    text-shadow: 2px 2px rgb(164, 36, 59);
     text-transform: uppercase;
     text-align: left;
     margin-left: 5px;
@@ -54,8 +54,8 @@ header {
 }
 
 .nav-links .active {
-      color: darkorange;
-      text-shadow: 1px 1px darkblue;
+      color: white;
+      text-shadow: 2px 2px rgb(164, 36, 59);;
       border-bottom: 2px solid darkblue;
 }
 
