--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,8 @@ body {
 
 header {
     /*background-color:rgba(135,206,250, 0.6);*/
-    background-color: rgba(175, 187, 242, 0.6);
+    /*background-color: rgba(175, 187, 242, 0.6);*/
+    background-color:rgba(8, 72, 135, 0.6);
     border-radius: 10px;
 }
 
@@ -49,14 +50,13 @@ header {
 }
 
 .nav-links a:hover {
-    font-weight: bold;
-    border-bottom: 2px solid darkblue;
+    border-bottom: 2px solid white;
 }
 
 .nav-links .active {
-      color: white;
-      text-shadow: 2px 2px rgb(164, 36, 59);;
-      border-bottom: 2px solid darkblue;
+      color: rgba(245, 138, 7);
+      border-bottom: 2px solid white;
+      font-weight: 700;
 }
 
 /* Hero Image */
