--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,7 @@ body {
 }
 
 header {
-    
+
     background-color:rgba(8, 72, 135, 0.6);
     border-radius: 10px;
 }
@@ -78,7 +78,7 @@ header {
     border-radius: 10px;
     
 }
-
+  /* Book Now Button */
 #book-now {
 
     background-color: rgb(164, 36, 59);
@@ -117,7 +117,7 @@ header {
 /* medium to large mobile screens and tablets*/
 
 @media screen and (max-width: 768px) {
-
+    
     .nav-links{
         justify-content: flex-end;
     }
