--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,7 +72,7 @@ header {
     background-color: rgba(175, 187, 242, 0.4);
     width: 400px;
     height: auto;
-    margin-top: 10px;
+    margin: 10px;
     padding: 10px;
     text-align: center;
     border-radius: 10px;
@@ -133,9 +133,7 @@ header {
 
 @media screen and (max-width: 768px) {
 
-    .nav-links{
-        justify-content: flex-end;
-    }
+ 
 
     /* #slogan {
         color: white;
