--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,8 +106,7 @@ header {
 
     color: white;
     background-color: rgba(175, 187, 242, 0.4);
-    width: 400px;
-    width: 400px;
+    height: auto;
     padding: 10px;
     text-align: center;
     border-radius: 10px;
