--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -137,15 +137,17 @@ header {
 
 @media screen and (max-width: 320px) {
 
+    /* Navigation */
+    
+    .nav-links {
+        flex-direction: column;
+        align-items: center;
+    }
+      
     /* home*/
 
     .logo {
         text-align: center;
-    }
-
-    .nav-links {
-        flex-direction: column;
-        align-items: center;
     }
 
 }
