--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -112,6 +112,19 @@ header {
     border-radius: 10px;
     margin-top: 10px;
 }
+/* Gallery Page */
+
+#gallery {
+        color: white;
+        background-color: rgba(175, 187, 242, 0.4);
+        height: auto;
+        padding: 10px;
+        text-align: center;
+        border-radius: 10px;
+        margin-top: 10px;
+    }
+
+
 
 /* very large screen sizes */
 
@@ -127,6 +140,11 @@ header {
     /* About */
 
     #about {
+        width: 400px;
+        margin-left: 10px;
+    }
+
+    #gallery {
         width: 400px;
         margin-left: 10px;
     }
@@ -164,6 +182,13 @@ header {
     /* About */
 
     #about {
+        width: 100%;
+        margin: 10px 10px 0 0;
+    }
+
+    /* Gallery */
+
+    #gallery {
         width: 100%;
         margin: 10px 10px 0 0;
     }
