Comment out .active class and add color and font weight to a:hover instead

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,13 +51,15 @@ header {
 
 .nav-links a:hover {
     border-bottom: 2px solid white;
+    color: rgba(245, 138, 7);
+    font-weight: bold;
 }
 
-.nav-links .active {
+/*.nav-links .active {
       color: rgba(245, 138, 7);
       font-weight: bold;
       border-bottom: 2px solid white;
-}
+}*/
 
 /* Hero Image */
 
