--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -172,6 +172,10 @@ img {
         margin-left: 10px;
     }
 
+    #contact-us {
+        width: 400px;
+        margin-left: 10px;
+
 }
 
 /* small mobile screen sizes */
@@ -217,6 +221,13 @@ img {
     }
 
     img{
+        width: 100%;
+        margin: 10px 10px 0 0;
+    }
+
+    /* Contact Us */
+
+    #contact-us {
         width: 100%;
         margin: 10px 10px 0 0;
     }
