--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,12 +64,12 @@ header {
 /* Hero Image */
 
 #hero-image {
-     Height: 100vh;
-     width: 100%;
+    
      background-image: url('../images/forest-walk.webp');
      background-repeat: no-repeat;
      background-position: center center;
      background-size: cover;
+     background-attachment:fixed;
 
 }
 
