Comment out header position and width

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,8 +16,8 @@ header {
     background-color:rgba(8, 72, 135, 0.6);
     border-radius: 10px;
     Height:auto;
-    position: fixed;
-    width:100%;
+    /*position: fixed;
+    width:100%;*/
 }
 
 /* Main Navigation */
