--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,7 @@ body {
     font-size: 1rem;
 }
 
-header {
+header, footer {
     background-color:rgba(8, 72, 135, 0.6);
     border-radius: 10px;
     Height:auto;
