--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,7 +46,7 @@ header, footer {
     justify-content: center;
 }
 
-.nav-links a, #footer-links a {
+a {
     text-decoration: none;
     color: white;
 }
