--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,9 +19,7 @@ header, footer {
 
 /* Navigation */
 
-.logo > a {
-    color: white;
-    text-decoration: none;
+.logo {
     text-shadow: 2px 2px rgb(164, 36, 59);
     text-transform: uppercase;
     text-align: left;
