--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,7 +70,7 @@ a {
 
 /* Home Page*/
 
-#slogan {
+#slogan, #about, #gallery, #contact-us {
 
     color: white;
     background-color: rgba(175, 187, 242, 0.4);
@@ -91,27 +91,8 @@ a {
 
 /* About Page */
 
-#about {
 
-    color: white;
-    background-color: rgba(175, 187, 242, 0.4);
-    height: auto;
-    padding: 10px;
-    text-align: center;
-    border-radius: 10px;
-    margin-top: 10px;
-}
 /* Gallery Page */
-
-#gallery {
-        color: white;
-        background-color: rgba(175, 187, 242, 0.4);
-        height: auto;
-        padding: 10px;
-        text-align: center;
-        border-radius: 10px;
-        margin-top: 10px;
-    }
 
 img {
     display: flex;
@@ -119,16 +100,6 @@ img {
 }
 
 /* Contact Us */
-
-#contact-us {
-
-    color: white;
-    background-color: rgba(175, 187, 242, 0.4);
-    height: auto;
-    padding: 10px;
-    border-radius: 10px;
-    margin-top: 10px;
-}
 
 /* very large screen sizes */
 
