Refactor code from line 29 to have a single ul selector

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,7 +26,7 @@ header, footer {
     margin-left:10px;
 }
 
-.nav-links, #footer-links {
+ul {
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-end;
