Move h1 tags with class of logo around the logo text and change the font size in css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,6 +20,7 @@ header, footer {
 /* Navigation */
 
 .logo {
+    font-size: 2rem;
     text-shadow: 2px 2px rgb(164, 36, 59);
     text-transform: uppercase;
     text-align: left;
