Add a margin left to ul

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,6 +39,7 @@ ul {
     justify-content: flex-end;
     gap: 0 1rem;
     margin-right: 1rem;
+    margin-left: 1rem;
     list-style-type: none;
     text-transform: uppercase;
     
