--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -112,6 +112,10 @@ form {
     background-color: rgb(164, 36, 59);
 }
 
+.submit:hover {
+    background-color: rgba(245, 138, 7);;
+}
+
 /* very large screen sizes */
 
 @media screen and (max-width: 2560px) {
