--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -116,55 +116,8 @@ form {
     background-color: rgba(245, 138, 7);;
 }
 
-/* very large screen sizes */
-
-@media screen and (max-width: 2560px) {
-
-    /* Home */
-
-    #home, #about, #gallery, #contact-us {
-        width: 400px;
-        margin-left: 10px;
-    }
-
-    img{
-        width: auto;
-        margin-left: 10px;
-    }
-}
-
-/* small mobile screen sizes */
-
-@media screen and (max-width: 320px) {
-
-    /* Navigation */
-    
-    .nav-links {
-        flex-direction: column;
-        align-items: center;
-    }
-      
-    /* home*/
-
+@media screen and (min-width: 490px) {
     .logo {
         text-align: center;
     }
-
-}
-
-  @media screen and (max-width: 448px) {
-
-    /* Home */
-
-    #home, #about, #gallery, #contact-us, img{
-        width: 100%;
-        margin: 10px 10px 0 0; 
-}
-
-  }
-
-/* medium to large mobile screens and tablets*/
-
-@media screen and (max-width: 768px) {
-
 }
