--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,7 +84,7 @@ ul {
     padding: 10px;
     text-align: center;
     border-radius: 10px;
-    margin-top: 10px;
+    margin: 10px;
 }
 
   /* Book Now Button */
@@ -116,8 +116,13 @@ form {
     background-color: rgba(245, 138, 7);;
 }
 
-@media screen and (min-width: 490px) {
+@media screen and (max-width: 491px) {
     .logo {
         text-align: center;
+    }
+
+    .nav-links {
+        flex-direction: column;
+        align-items: center;
     }
 }
