Add img selector with width of auto to css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -116,6 +116,11 @@ form {
     background-color: rgba(245, 138, 7);;
 }
 
+/* Gallery */
+img {
+    width:auto;
+}
+
 @media screen and (max-width: 491px) {
     .logo {
         text-align: center;
