Add img selector to css with width of 100%

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -118,6 +118,10 @@ form {
 
 /* gallery */
 
+img {
+    width: 100%;
+}
+
 @media screen and (max-width: 491px) {
     .logo {
         text-align: center;
