--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -122,7 +122,7 @@ img {
     width: 100%;
 }
 
-@media screen and (max-width: 491px) {
+@media screen and (min-width: 50px) {
     .logo {
         text-align: center;
     }
@@ -131,4 +131,23 @@ img {
         flex-direction: column;
         align-items: center;
     }
+}
+
+@media screen and (min-width: 435px) {
+    #home, #about, #gallery, #contact-us {
+        width:400px;
+    }
+
+    .logo {
+        text-align: left;
+    }
+
+    .nav-links {
+        flex-direction: row;
+        justify-content: flex-end;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    
 }
