Add comment for media queries

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -121,6 +121,8 @@ img {
     width: 100%;
 }
 
+/* media queries*/
+
 @media screen and (min-width: 50px) {
     .logo {
         text-align: center;
