--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,7 +66,7 @@ ul {
 
 #hero-image {
     
-     background-image: url('../images/forest-walk.webp');
+     background-image: url('../images/forest-walk.jpg');
      background-repeat: no-repeat;
      background-position: center center;
      background-size: cover;
