Style .container width and margins

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,6 +19,9 @@ header, footer {
 
 .container {
     max-width: 1140px;
+    width: 100%;
+    margin-right: auto;
+    margin-left: auto;
 }
 
 /* Navigation */
