--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -155,6 +155,11 @@ img {
         flex-direction: row;
         justify-content: flex-end;
     }
+
+    .container {
+        padding-left: 1rem;
+        paddind-right: 1rem;
+    }
 }
 
 
