--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -143,10 +143,6 @@ img {
 }
 
 @media screen and (min-width: 435px) {
-    #home, #about, #gallery, #contact-us {
-        width: 400px;
-    }
-
     .logo {
         text-align: left;
     }
@@ -158,7 +154,7 @@ img {
 
     .container {
         padding-left: 1rem;
-        paddind-right: 1rem;
+        padding-right: 1rem;
     }
 }
 
