--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,7 +30,7 @@ header, footer {
     font-size: 2rem;
     text-shadow: 2px 2px rgb(164, 36, 59);
     text-transform: uppercase;
-    text-align: left;
+    text-align: center;
     margin-left: 0.625rem;
 }
 
