--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,6 +60,11 @@ ul {
     font-size: 2rem; 
 }
 
+.nav-links {
+    flex-direction: column;
+    align-items: center;
+}  
+
 .nav-links a:hover {
     border-bottom: 2px solid white;
 }
