--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,6 +106,11 @@ ul {
     margin-top: 5px;
 }
 
+#book-now:hover {
+    background-color: rgba(245, 138, 7);
+    
+}
+
 form {
     background-color: rgba(8, 72, 135, 0.6);
     border-radius: 0.625rem;
@@ -124,7 +129,7 @@ form {
 }
 
 .submit:hover {
-    background-color: rgba(245, 138, 7);;
+    background-color: rgba(245, 138, 7);
 }
 
 /* gallery */
