--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -100,10 +100,15 @@ ul {
 
   /* Book Now Button */
 
+
+p {
+    margin-top: 5px;
+}
+
 #book-now {
 
     background-color: rgb(164, 36, 59);
-    margin-top: 5px;
+    
 }
 
 #book-now:hover {
