--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,7 +28,7 @@ header, footer {
 
 .logo {
     font-size: 2rem;
-    text-shadow: 2px 2px rgb(164, 36, 59);
+    text-shadow: 0.13rem 0.13rem rgb(164, 36, 59);
     text-transform: uppercase;
     text-align: center;
     margin-left: 0.625rem;
@@ -66,7 +66,7 @@ ul {
 }  
 
 .nav-links a:hover {
-    border-bottom: 2px solid white;
+    border-bottom: 0.13rem solid white;
 }
 
 .nav-links a:hover, #footer-links a:hover {
@@ -102,7 +102,7 @@ ul {
 
 
 p {
-    margin-top: 5px;
+    margin-top: 0.313rem;
 }
 
 #book-now {
@@ -141,7 +141,7 @@ form {
 
 img {
     width: 100%;
-    border: 2px solid white;
+    border: 0.13rem solid white;
 }
 
 /* media queries*/
