--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -98,11 +98,9 @@ ul {
 
   /* Book Now Button */
 
-/* p {
+p {
     color: white;
-    text-align: center;
-    margin-top: 0.313rem;
-} */
+} 
 
 #book-now {
     color: white;
