Style footer paragraph

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -92,6 +92,10 @@ ul {
 
 /* Social links navigation */
 
+footer > p {
+    text-align: center;
+}
+
 #footer-links {
     justify-content: center;
 }
