--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -136,6 +136,7 @@ form {
     font-size: 1.5rem;
     color: white;
     background-color: rgb(164, 36, 59);
+    border: 0.13rem solid black;
 }
 
 .submit:hover {
