--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -177,6 +177,12 @@ img {
     img {
         width: 30%;
     }
+
+    form {
+        width: 42.35rem;
+        margin-left: auto;
+        margin-right: auto;
+    }
 }
 
 
